# equinox

./: .envrc  .gitignore  BUILDING.md  README.md  equinox.nimble  flake.nix  nim.cfg
backends/graphic/: stub.txt
nix/: devShells.nix  lock.json  package.nix
src/: envparser.nim  equinox_comp.nim
src/compositor/: core.nim  main.cc  meson.build
src/compositor/backend/: EquinoxWaylandBackend.cpp  meson.build  xdg-decoration-unstable-v1.c
src/container/: configuration.nim
src/gui/: launcher.nim
src/nimcomp/: core.nim
